style.css
html, body {
  height: 100%;
  width: 100%;
}
 html, body, section, article, h1, h2, h3, h6, p, strong, em, a, select, ul, li, input,a textarea, button, img {
  margin: 0;
  border: 0;
  padding: 0;
  outline: 0;

  box-sizing: inherit;
  font: inherit;
  text-align: inherit;
  text-decoration: inherit;
  color: inherit;

  background: transparent;

  font-size: 12px;
  font-weight: 300;
  font-family: Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;

  list-style-type: none;
}

.main-content {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: space-between;
  position: relative;
}

ul {
  width: 24%;
  height: 100%;
  background-color: whitesmoke;
  overflow: scroll;
}

li {
  cursor: pointer;
}

.selected {
  background-image: url('./arrow.svg');
  background-repeat: no-repeat;
  background-position: 104% 50%;
}

.article {
  width: 74%;
  height: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-between;

}

.article-container {
}

.article-header h2 {
  font-size: 20px;
}

hr {
  border: 0;
  height: 0;
  border-top: 1px solid rgba(0, 0, 0, 0.1);
  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
}

.article-content figure {
  text-align: center;
}

.image {
  width: 500px;
  height: 250px;
  background-color: grey;
  margin: 0 auto;
}

p:first-child:first-letter {
  float: left;
  font-size: 35px;
  line-height: 25px;
  padding-top: 2px;
  padding-right: 4px;
  padding-left: 1.5px;
}

.message {
  border: 1px solid lightgrey;
  padding: 10px;
  margin-top: 20px;
  margin-bottom: 20px;
  font-size: 15px;
}

